# MessagingTiming

./: .metadata  LICENSE  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/ffi/: ffi.c  ffi.h
android/src/main/: AndroidManifest.xml
android/src/main/java/com/example/MessagingTiming/: MessagingTimingPlugin.java  Pigeon.java
example/: .metadata  README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/MessagingTiming_example/: MainActivity.java
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
example/web/: index.html  manifest.json
ios/: MessagingTiming.podspec
ios/Classes/: MessagingTimingPlugin.h  MessagingTimingPlugin.m  ffi.h  ffi.m  pigeon.h  pigeon.m
lib/: MessagingTiming.dart  pigeon.dart
pigeons/: messages.dart
test/: MessagingTiming_test.dart
